# chatbot

./: README.md  chatbot.c  chatbot.h  chatbot.toml  ish.c  main.c  meson.build  rwkv.c
chatbot/: chatbot-chat-data.c  chatbot-chat-data.h  chatbot-data.c  chatbot-data.h  chatbot-language-model.c  chatbot-language-model.h  chatbot-module.c  chatbot-module.h  chatbot-tool-callable-language-model.c  chatbot-tool-callable-language-model.h  chatbot-tool-manager.c  chatbot-tool-manager.h  chatbot-tool.c  chatbot-tool.h  chatbot-trainer.c  chatbot-trainer.h  chatbot.h
cli/: main.c
subprojects/: moduler_model.wrap  rwkv_tokenizer.wrap
